fix: appearance for Hero section on tablets

--- a/src/components/Hero/Hero.styles.scss
+++ b/src/components/Hero/Hero.styles.scss
@@ -40,8 +40,8 @@
     }
 
     .logo-container {
-      width: 580px;
-      margin-top: -60px;
+      width: 60%;
+      margin-top: -20px;
     }
   }
 
